Bug 264378 - Ktorrent crashed instead of quitting
Summary: Ktorrent crashed instead of quitting
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 281997 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-26 23:06 UTC by drdrnewman
Modified: 2011-09-17 10:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description drdrnewman 2011-01-26 23:06:08 UTC
Application: ktorrent (4.0.3)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-24-generic x86_64
Distribution: Ubuntu 10.10

-- Information about the crash:
Every time I close down Ktorrent, with a File/Exit, it crashes instead of closing down.

It makes no different whether I have enabled microtorrent or not.

I am running Kubuntu 10.10 on a 64-bit platform.

The crash can be reproduced every time.

-- Backtrace:
Application: KTorrent (ktorrent), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f8c6f54c760 (LWP 21389))]

Thread 2 (Thread 0x7f8c52eba700 (LWP 21397)):
#0  0x00007f8c6b0ce203 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f8c65f29009 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f8c65f2945c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f8c6cbb01e6 in QEventDispatcherGlib::processEvents (this=0x7f8c540056d0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#4  0x00007f8c6cb82a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007f8c6cb82dec in QEventLoop::exec (this=0x7f8c52eb9db0, flags=) at kernel/qeventloop.cpp:201
#6  0x00007f8c6ca8d2fd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#7  0x00007f8c6cb625f8 in QInotifyFileSystemWatcherEngine::run (this=0x285cb40) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f8c6ca9027e in QThreadPrivate::start (arg=0x285cb40) at thread/qthread_unix.cpp:266
#9  0x00007f8c6c805971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#10 0x00007f8c6b0da92d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f8c6f54c760 (LWP 21389)):
[KCrash Handler]
#6  0x00007f8c6f06a216 in net::SocketMonitor::add (this=0x6d9080, sock=0x22c75a0) at ../../src/net/socketmonitor.cpp:117
#7  0x00007f8c6f09dd1b in bt::HttpConnection::hostResolved (this=0x20f2a20, res=<value optimized out>) at ../../src/download/httpconnection.cpp:222
#8  0x00007f8c6f09df99 in bt::HttpConnection::qt_metacall (this=0x20f2a20, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff2f4a2a20) at ./httpconnection.moc:80
#9  0x00007f8c6cb9bb27 in QMetaObject::activate (sender=0x28f4c70, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x1) at kernel/qobject.cpp:3280
#10 0x00007f8c6d2cce62 in KNetwork::KResolver::finished (this=0x0, _t1=<value optimized out>) at ./k3resolver.moc:85
#11 0x00007f8c6d2cd1a9 in KNetwork::KResolver::emitFinished (this=0x28f4c70) at ../../kdecore/network/k3resolver.cpp:534
#12 0x00007f8c6d2cd1fd in KNetwork::KResolver::event (this=0x0, e=0x7fff2f4a26d0) at ../../kdecore/network/k3resolver.cpp:520
#13 0x00007f8c6bccdfdc in QApplicationPrivate::notify_helper (this=0x1f9dbc0, receiver=0x28f4c70, e=0x2756e00) at kernel/qapplication.cpp:4396
#14 0x00007f8c6bcd3aed in QApplication::notify (this=0x7fff2f4a3620, receiver=0x28f4c70, e=0x2756e00) at kernel/qapplication.cpp:4277
#15 0x0000000000437d1a in kt::App::notify (this=0x0, receiver=0x7fff2f4a26d0, event=0x20b7260) at ../../ktorrent/app.cpp:97
#16 0x00007f8c6cb83cdc in QCoreApplication::notifyInternal (this=0x7fff2f4a3620, receiver=0x28f4c70, event=0x2756e00) at kernel/qcoreapplication.cpp:732
#17 0x00007f8c6cb86c22 in sendEvent (receiver=0x0, event_type=<value optimized out>, data=0x1f6abc0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#18 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=<value optimized out>, data=0x1f6abc0) at kernel/qcoreapplication.cpp:1373
#19 0x00007f8c6cbb0653 in sendPostedEvents (s=0x1f9a990) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#20 postEventSourceDispatch (s=0x1f9a990) at kernel/qeventdispatcher_glib.cpp:277
#21 0x00007f8c65f25342 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#22 0x00007f8c65f292a8 in ?? () from /lib/libglib-2.0.so.0
#23 0x00007f8c65f2945c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#24 0x00007f8c6cbb0193 in QEventDispatcherGlib::processEvents (this=0x1f6a320, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#25 0x00007f8c6bd80a4e in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#26 0x00007f8c6cb82a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#27 0x00007f8c6cb82dec in QEventLoop::exec (this=0x7fff2f4a3240, flags=) at kernel/qeventloop.cpp:201
#28 0x00007f8c6e78be4c in KIO::NetAccess::enter_loop (this=0x7fff2f4a32e0) at ../../kio/kio/netaccess.cpp:502
#29 0x00007f8c6e78c49f in KIO::NetAccess::synchronousRunInternal (this=0x7fff2f4a32e0, job=0x27a3d40, window=<value optimized out>, data=0x0, finalURL=0x0, metaData=0x0) at ../../kio/kio/netaccess.cpp:487
#30 0x00007f8c6e78cb91 in KIO::NetAccess::synchronousRun (job=0x27a3d40, window=0x0, data=0x0, finalURL=0x0, metaData=<value optimized out>) at ../../kio/kio/netaccess.cpp:277
#31 0x00007f8c6edb1bee in kt::QueueManager::clear (this=0x20db010) at ../../libktcore/torrent/queuemanager.cpp:92
#32 0x000000000042bcb1 in kt::Core::onExit (this=0x20dae20) at ../../ktorrent/core.cpp:909
#33 0x0000000000434124 in kt::GUI::queryExit (this=0x211bd80) at ../../ktorrent/gui.cpp:563
#34 0x00007f8c6e2def34 in KMainWindowPrivate::_k_shuttingDown (this=<value optimized out>) at ../../kdeui/widgets/kmainwindow.cpp:1142
#35 0x00007f8c6e2e32e9 in KMainWindow::qt_metacall (this=0x211bd80, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff2f4a3540) at ./kmainwindow.moc:102
#36 0x00007f8c6e31fbb5 in KXmlGuiWindow::qt_metacall (this=0x0, _c=793388752, _id=34304608, _a=0x1) at ./kxmlguiwindow.moc:102
#37 0x0000000000437800 in kt::GUI::qt_metacall (this=0x0, _c=793388752, _id=34304608, _a=0x1) at ./gui.moc:102
#38 0x00007f8c6cb9bb27 in QMetaObject::activate (sender=0x7fff2f4a3620, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x1) at kernel/qobject.cpp:3280
#39 0x00007f8c6cb86ee3 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1014
#40 0x0000000000426a8b in main (argc=<value optimized out>, argv=<value optimized out>) at ../../ktorrent/main.cpp:176

Reported using DrKonqi
Comment 1 Joris Guisson 2011-01-27 18:48:11 UTC
Git commit 376c30979cd4d1d668c26daf5e0266d2d46dc259 by Joris.
Pushed by guisson into branch 'master'.

Fix crashes at exit

BUG: 264378
BUG: 256639

M  +1    -0    ChangeLog     
M  +74   -36   src/net/socketmonitor.cpp     
M  +9    -11   src/net/socketmonitor.h     

http://commits.kde.org/003b774d/376c30979cd4d1d668c26daf5e0266d2d46dc259
Comment 2 Joris Guisson 2011-01-27 18:49:58 UTC
Git commit ca5d0595bf9bf826207cddacc03cc9eb9349efd8 by Joris.
Pushed by guisson into branch '1.1'.

Backport to 1.1: Fix crashes at exit

CCBUG: 264378
CCBUG: 256639

M  +1    -0    ChangeLog     
M  +74   -36   src/net/socketmonitor.cpp     
M  +9    -11   src/net/socketmonitor.h     

http://commits.kde.org/003b774d/ca5d0595bf9bf826207cddacc03cc9eb9349efd8
Comment 3 Joris Guisson 2011-09-17 10:02:51 UTC
*** Bug 281997 has been marked as a duplicate of this bug. ***