Fix crashes at exit

BUG: 264378
BUG: 256639